test/cases/error/branch-mismatch.cba
-- @expect-error: Type mismatch
if true then return 1 else return "hello"
